--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,190 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Rubik:wght@400;700&display=swap');
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body {
+  background: #fff;
+  color: #222;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+}
+.wrapper {
+  width: 1280px;
+  margin: 50px auto;
+}
+header {
+  position: relative;
+}
+header .logo {
+  font-weight: 600;
+  font-size: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header ul.nav {
+  float: right;
+  list-style: none;
+}
+header ul.nav li {
+  display: inline;
+  margin-left: 25px;
+  cursor: pointer;
+  transition: opacity 250ms;
+}
+header ul.nav li:hover {
+  opacity: 0.5;
+}
+header .shop-cart-button {
+  float: right;
+  cursor: pointer;
+  transition: color, transform 500ms ease;
+}
+header .shop-cart-button:hover,
+header .shop-cart-button.active{
+  color: #86d486;
+  transform: scale(1.25);
+}
+
+header .shop-cart {
+  position: absolute;
+  top: 30px;
+  right: 0;
+  width: 450px;
+  background: white;
+  -webkit-box-shadow: 2px 0px 18px -4px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 0px 18px -4px rgba(0,0,0,0.75);
+  box-shadow: 2px 0px 18px -4px rgba(0,0,0,0.75);
+  z-index: 1000;
+  padding: 20px;
+  padding-bottom: 0;
+}
+header .shop-cart .empty h2{
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+header .shop-cart .item {
+  width: 100%;
+  float: left;
+  margin-bottom: 20px;
+}
+header .shop-cart .item img {
+  float: left;
+  width: 70px;
+  margin-right: 20px;
+}
+header .shop-cart .item h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+
+}
+header .shop-cart .item b {
+  font-size: 15px;
+  font-weight: 600;
+  color: #86d486;
+}
+header .shop-cart .item .delete-icon {
+  color: #f14848;
+  float: right;
+  position: relative;
+  top: -25px;
+  cursor: pointer;
+  transition: color, transform 500ms ease;
+}
+header .shop-cart .item .delete-icon:hover{
+  transform: scale(1.25);
+  color: red;
+}
+header .shop-cart .sum {
+  float: left;
+  width: 100%;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+header .presentation {
+  margin: 50px 0;
+  background: url('./img/bg.jpg') no-repeat;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center center;
+  background-blend-mode: multiply;
+  background-color: #bcbcbc;
+  position: relative;
+
+}
+header .presentation:after {
+  content: 'Ресторан под водой';
+  position: absolute;
+  top: 130px;
+  left: 50px;
+  width: 200px;
+  font-size: 40px;
+  font-weight: 600;
+  color: #fff;
+}
+header .presentation:before {
+  content: '2 звезды';
+  position: absolute;
+  top: 280px;
+  left: 50px;
+  width: 200px;
+  font-size: 15px;
+  font-weight: 300;
+  color: #fff;
+}
+/* main -----------------------------------------------------------------------------*/
+main {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+main .item {
+  width: 30%;
+  margin-bottom: 50px;
+  background: #f5f5f5;
+  overflow: hidden;
+  position: relative;
+  padding-bottom: 20px;
+}
+main .item img {
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  transition: transform 500ms ease;
+}
+main .item img:hover {
+  transform: scale(1.05);
+}
+
+main h2, main p, main b {
+  margin: 10px 20px;
+  color: #333;
+}
+main b {
+  color: #86d486;
+}
+main .add-to-cart {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  background: #d02e2e;
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  line-height: 35px;
+  color: white;
+  border-radius: 50%;
+  cursor: pointer;
+  font-weight: 600;
+  transition: transform 500ms ease;
+}
+main .add-to-cart:hover{
+  transform: scale(1.15) translateY(-2px);
+}
+
+/* Footer -----------------------------------------------------------------> */
+footer {
+  text-align: center;
+  margin-top: 100px;
 }
